--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.8",
     "sonner": "^2.0.3",
     "swr": "^2.3.3",
