--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
+    "next-transpile-modules": "^10.0.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
