refresh_token lasts 90 days instead of 30

--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   at-admin:
-    container_name: at-admin-app
+    container_name: at-admin
     build:
       context: ../
       dockerfile: deployment/Dockerfile
