--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -2,7 +2,7 @@ services:
   at-admin:
     container_name: at-admin
     build:
-      context: .
+      context: ../
       dockerfile: deployment/Dockerfile
     env_file:
       - ../.env
