--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
       context: .
       dockerfile: deployment/Dockerfile
     env_file:
-      - ../.env
+      - .env
     restart: unless-stopped
     ports:
       - 3000:3000
